--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
+@import "react-alice-carousel/lib/alice-carousel.css";
+.alice-carousel__wrapper{
+    height: 400px;
+}
