--- a/src/components/Admission/eligibility/styles.module.css
+++ b/src/components/Admission/eligibility/styles.module.css
@@ -4,8 +4,12 @@
     margin-bottom: 100px;
 }
 .tablecss th, td{
-    padding: 16px;
+    padding: 10px;
     text-align: center;
     border: 1px solid rgb(192, 192, 192);
+    font-size: 14px;
     
+}
+.tablecss li{
+    text-align: left;
 }
