--- a/src/components/About/Rector/Rector.css
+++ b/src/components/About/Rector/Rector.css
@@ -1,114 +1,132 @@
 .recHead-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .rector-header {
-    background-image: url('../aboutus/assests/shade.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 300px;
-    position: relative;
-  }
-  
-  
-  .rector-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: rgb(136, 133, 133);
-    font-size: 300%;
+  display: flex;
+  justify-content: center;
+}
 
-  }
-  
-  .Recmessage-text h1 {
-    font-size: 50px;
-    margin-bottom: 0;
-  }
+.rector-header {
+  background-image: url("../aboutus/assests/mess.jpeg");
+  background-color: rgba(0, 0, 0, 0.925); /* black with 50% opacity */
+  background-blend-mode: multiply; /* blend background image with black */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+.rector-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: rgb(224, 224, 224);
+  font-size: 300%;
+}
 
-  .Recmessage-section {
-    background-color: #e9e9e9;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    transition: opacity 1s ease-out, transform 1s ease-out;
-    animation: heading 1s ease-in-out;
+.Recmessage-text h1 {
+  font-size: 50px;
+  margin-bottom: 0;
+}
 
+.Recmessage-section {
+  background-color: #f3f3f3;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  transition: opacity 1s ease-out, transform 1s ease-out;
+  animation: heading 1s ease-in-out;
+}
+.Recmessage-section.animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.Recmessage-container {
+  max-width: 81%;
+  margin-left: 10%;
+  margin-right: auto;
+}
+
+.Recmessage-heading1 {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: left;
+  color: rgb(138, 10, 10);
+  margin-bottom: 28px;
+  position: relative;
+  animation: slide-in 1s ease-in-out; /* Add slide-in animation with 1 second duration */
+
+}
+.Recmessage-heading2 {
+  font-size: 33px;
+  font-weight: bold;
+  text-align: left;
+  color: rgb(138, 10, 10);
+  margin-bottom: 30px;
+  position: relative;
+
+}
+.bold-Red {
+  color: rgb(138, 10, 10);
+  font-weight: bold;
+  font-size: 120%;
+}
+
+.bold-grey {
+  color: rgb(66, 66, 66);
+  font-weight: bold;
+  font-size: 110%;
+
+}
+.light-red {
+  color: rgb(180, 8, 8);
+}
+.Recmessage-paragraph {
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 110%;
+
+}
+.Recred-underline {
+  width: 15%;
+  height: 4px;
+  background-color: #085014;
+  position: absolute;
+  top: 649px; /* Adjust the top value to position the red line correctly */
+  left: 24%; /* Position the red line at the center of the heading */
+  animation: underline 2s ease-in-out infinite;
+  transform: translateX(-50%); /* Center the red line horizontally */
+}
+
+
+@keyframes underline {
+  0% {
+    transform: translateX(-50%) scaleX(0); /* Start with no width */
   }
-  .Recmessage-section.animate {
-    opacity: 1;
+  50% {
+    transform: translateX(-50%) scaleX(1.2); /* Scale up to a little larger than the original width */
+  }
+  100% {
+    transform: translateX(-50%) scaleX(0); /* End with no width again */
+  }
+}
+@keyframes heading {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
     transform: translateY(0);
+    opacity: 1;
   }
-  
-  .Recmessage-container {
-    max-width: 800px;
-    margin-left: 10%;
-    margin-right: auto;
+}
+@keyframes slide-in {
+  from {
+    transform: translateX(-20%); /* Move the element from left to right */
+    opacity: 0; /* Start with 0 opacity */
   }
-  
-  .Recmessage-heading1 {
-    font-size: 42px;
-    font-weight: bold;
-    text-align: left;
-    color: #1f1b1b;
-    margin-bottom: 30px;
-    position: relative;
+  to {
+    transform: translateX(0); /* Move the element to its original position */
+    opacity: 1; /* End with 100% opacity */
   }
-  .Recmessage-heading2 {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: left;
-    color: #1f1b1b;
-    margin-bottom: 30px;
-    position: relative;
-  }  
-
- .Recmessage-paragraph{
-    width: 130%;
- } 
-  .Recred-underline {
-    width: 20%;
-    height: 3.5px;
-    background-color: #b8101e;
-    position: absolute;
-    top: 644px; /* Adjust the top value to position the red line correctly */
-    left: 24%; /* Position the red line at the center of the heading */
-    animation: underline 2s ease-in-out infinite;
-    transform: translateX(-50%); /* Center the red line horizontally */
-  }
-  .Recred2-underline {
-    width: 20%;
-    height: 3.5px;
-    background-color: #b8101e;
-    position: absolute;
-    top: 203%; /* Adjust the top value to position the red line correctly */
-    left: 24%; /* Position the red line at the center of the heading */
-    transform: translateX(-50%); /* Center the red line horizontally */
-    animation: underline 2s ease-in-out infinite;
-  }
-
-  
-  @keyframes underline {
-    0% {
-      transform: translateX(-50%) scaleX(0); /* Start with no width */
-    }
-    50% {
-      transform: translateX(-50%) scaleX(1.2); /* Scale up to a little larger than the original width */
-    }
-    100% {
-      transform: translateX(-50%) scaleX(0); /* End with no width again */
-    }
-  }
-  @keyframes heading {
-    0% {
-      transform: translateY(-50px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
+}
