--- a/src/components/About/aboutus/AboutUs.css
+++ b/src/components/About/aboutus/AboutUs.css
@@ -1,113 +1,142 @@
 .about-us-container {
-    display: flex;
-    justify-content: center;
-  }
+  display: flex;
+  justify-content: center;
+}
+
+.about-us-header {
+  background-image: url("../aboutus/assests/mess.jpeg");
+  background-color: rgba(0, 0, 0, 0.925); /* black with 50% opacity */
+  background-blend-mode: multiply; /* blend background image with black */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
+.about-us-header::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.about-us-header:hover::before {
+  opacity: 0.5;
+}
+
+.header-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.header-text h1 {
+  font-size: 50px;
+  margin-bottom: 0;
+}
+
+.welcome-section {
+  background-color: #f5f5f5;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  animation: heading 1s ease-in-out;
+}
+
+.welcome-container {
+  max-width: 800px;
+  margin-left: 0; /* Change margin-left to 0 to move the content to the left */
+  margin-right: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 10%;
+}
+
+.welcome-heading {
+  font-size: 44px;
+  font-weight: bold;
+  text-align: center;
+  color: #aa010f;
+  margin-right: 30%;
+  margin-bottom: 30px;
+  position: relative; /* Add position relative to enable absolute positioning of the red line */
+  animation: slide-in 1s ease-in-out; /* Add slide-in animation with 1 second duration */
   
-  .about-us-header {
-    background-image: url('./assests/Aboutbg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 400px;
-    position: relative;
-  }
-  
-  .about-us-header::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
+
+}
+.welcome-paragraph {
+  margin: 30px auto;
+  max-width: 840px;
+  padding: 0 20px;
+  font-size: 1.2rem;
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 110%;
+  margin-right: 35%; /* Add negative left margin to align with the heading */
+}
+
+.text-mahroon {
+  color: #800000; /* Replace with your desired shade of dark red/maroon */
+}
+.welcome-images-container {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  left: 63%;
+  top: 730px; /* adjust this value as needed */
+}
+
+.welcome-image {
+  width: 200px;
+  height: 180px;
+  animation: image-animation 1s ease-in-out infinite alternate;
+  margin-left: 10px;
+}
+
+.welcome-image1 {
+  width: 300px;
+  height: 180px;
+  margin-left: 10px;
+  animation: image-animation 1s ease-in-out infinite alternate-reverse;
+}
+@keyframes heading {
+  0% {
+    transform: translateY(-50px);
     opacity: 0;
-    transition: opacity 0.3s ease;
   }
-  
-  .about-us-header:hover::before {
-    opacity: 0.5;
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
-  
-  .header-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-  }
-  
-  .header-text h1 {
-    font-size: 50px;
-    margin-bottom: 0;
-  }
-  
+}
 
-  .welcome-section {
-    background-color: #f7f7f7;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    animation: heading 1s ease-in-out;
-
+@keyframes slide-in {
+  from {
+    transform: translateX(-20%); /* Move the element from left to right */
+    opacity: 0; /* Start with 0 opacity */
   }
-  
-  
-  .welcome-container {
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    
+  to {
+    transform: translateX(0); /* Move the element to its original position */
+    opacity: 1; /* End with 100% opacity */
   }
-  
-  .welcome-heading {
-    font-size: 42px;
-    font-weight: bold;
-    text-align: center;
-    color: #3d3939;
-    margin-bottom: 30px;
-    position: relative; /* Add position relative to enable absolute positioning of the red line */
+}
+@keyframes image-animation {
+  0% {
+    transform: translateY(0);
   }
-  .welcome-paragraph {
-    margin: 30px auto;
-    max-width: 900px;
-    padding: 0 20px;
+  50% {
+    transform: translateY(-10px);
   }
-  .welcomered-underline {
-    width: 20%;
-    height: 4px;
-    background-color: #b8101e;
-    position: absolute;
-    bottom: -20px;
-    left: 50%;
-    transform: translateX(-50%); /* Center the element horizontally */
-    animation: underline 2s ease-in-out infinite;
+  100% {
+    transform: translateY(0);
   }
-  
-
-
-  @keyframes underline {
-    0% {
-      transform: translateX(-50%) scaleX(0); /* Start with no width */
-    }
-    50% {
-      transform: translateX(-50%) scaleX(1.2); /* Scale up to a little larger than the original width */
-    }
-    100% {
-      transform: translateX(-50%) scaleX(0); /* End with no width again */
-    }
-  }
-
-  @keyframes heading {
-    0% {
-      transform: translateY(-50px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-  
-  
+}
