--- a/src/components/About/message/Message.css
+++ b/src/components/About/message/Message.css
@@ -1,105 +1,117 @@
 .messHead-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .message-header {
-    background-image: url('../aboutus/assests/shade.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 300px;
-    position: relative;
-  }
-  
-  
-  .message-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: rgb(136, 133, 133);
+  display: flex;
+  justify-content: center;
+}
 
-  }
-  
-  .message-text h1 {
-    font-size: 50px;
-    margin-bottom: 0;
-  }
+.message-header {
+  background-image: url("../aboutus/assests/mess.jpeg");
+  background-color: rgba(0, 0, 0, 0.925); /* black with 50% opacity */
+  background-blend-mode: multiply; /* blend background image with black */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
 
-  .message-section {
-    background-color: #e9e9e9;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    animation: heading 1s ease-in-out;
+.bold-Red {
+  color: rgb(138, 10, 10);
+  font-weight: bold;
+}
 
-  }
-  
-  .message-container {
-    max-width: 800px;
-    margin-left: 10%;
-    margin-right: auto;
-  }
-  
-  .message-heading1 {
-    font-size: 42px;
-    font-weight: bold;
-    text-align: left;
-    color: #1f1b1b;
-    margin-bottom: 30px;
-    position: relative;
-  }
-  .message-heading2 {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: left;
-    color: #1f1b1b;
-    margin-bottom: 30px;
-    position: relative;
-  }  
-  .red-underline {
-    width: 20%;
-    height: 3.5px;
-    background-color: #b8101e;
-    position: absolute;
-    top: 644px; /* Adjust the top value to position the red line correctly */
-    left: 26%; /* Position the red line at the center of the heading */
-    transform: translateX(-50%); /* Center the red line horizontally */
-    animation: underline 2s ease-in-out infinite;
+.bold-grey {
+  color: rgb(66, 66, 66);
+  font-weight: bold;
+}
+.message-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: rgb(224, 224, 224);
+}
 
-  }
-  .red-line {
-    width: 23%;
-    height: 3.5px;
-    background-color: #b8101e;
-    position: absolute;
-    top: 212%; /* Adjust the top value to position the red line correctly */
-    left: 29%; /* Position the red line at the center of the heading */
-    transform: translateX(-50%); /* Center the red line horizontally */
-    animation: underline 2s ease-in-out infinite;
+.message-text h1 {
+  font-size: 50px;
+  margin-bottom: 0;
+}
 
+.message-section {
+  background-color: #e9e9e9;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  animation: heading 1s ease-in-out;
+}
+
+.message-container {
+  max-width: 80%;
+  margin-left: 10%;
+  margin-right: auto;
+}
+
+.message-heading1 {
+  font-size: 48px;
+  font-weight: bold;
+  text-align: left;
+  color: rgb(138, 10, 10);
+  margin-bottom: 28px;
+  position: relative;
+  animation: slide-in 1s ease-in-out; /* Add slide-in animation with 1 second duration */
+}
+.message-heading2 {
+  font-size: 33px;
+  font-weight: bold;
+  text-align: left;
+  color: rgb(138, 10, 10);
+  margin-bottom: 30px;
+  position: relative;
+}
+.message-paragraph {
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 110%;
+}
+.red-underline {
+  width: 15%;
+  height: 4px;
+  background-color: #085014;
+  position: absolute;
+  top: 649px; /* Adjust the top value to position the red line correctly */
+  left: 28%; /* Position the red line at the center of the heading */
+  animation: underline 2s ease-in-out infinite;
+  transform: translateX(-50%); /* Center the red line horizontally */
+}
+
+@keyframes underline {
+  0% {
+    transform: translateX(-50%) scaleX(0); /* Start with no width */
   }
-  
-  @keyframes underline {
-    0% {
-      transform: translateX(-50%) scaleX(0); /* Start with no width */
-    }
-    50% {
-      transform: translateX(-50%) scaleX(1.2); /* Scale up to a little larger than the original width */
-    }
-    100% {
-      transform: translateX(-50%) scaleX(0); /* End with no width again */
-    }
+  50% {
+    transform: translateX(-50%) scaleX(1.2); /* Scale up to a little larger than the original width */
   }
-  @keyframes heading {
-    0% {
-      transform: translateY(-50px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
+  100% {
+    transform: translateX(-50%) scaleX(0); /* End with no width again */
   }
+}
+@keyframes heading {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in {
+  from {
+    transform: translateX(-20%); /* Move the element from left to right */
+    opacity: 0; /* Start with 0 opacity */
+  }
+  to {
+    transform: translateX(0); /* Move the element to its original position */
+    opacity: 1; /* End with 100% opacity */
+  }
+}
