--- a/src/components/Alumni/AlumniSuccess.css
+++ b/src/components/Alumni/AlumniSuccess.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('../assests/phil.jpg') no-repeat center center fixed;
+    background: url('../Alumni/assests/phil.jpg') no-repeat center center fixed;
     background-size: cover;
     position: relative;
     animation: fadeInUp 1s ease-out;
