--- a/src/components/Home/News/news.css
+++ b/src/components/Home/News/news.css
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../../../../public/news0.PNG');
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../../../../public/news.png');
   background-size: cover;
   background-position: center;
 }
@@ -32,7 +32,7 @@
   overflow: visible;
   width: 70%;
   height: 95%;
-  background-image: url('../../../../public/left-poster.jpg');
+  background-image: url('../../../../public/leftPoster.jpg');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
