ADD contact page
ADD contact page

--- a/src/components/Home/News/news.css
+++ b/src/components/Home/News/news.css
@@ -39,7 +39,10 @@
   margin-left: 2rem;
   transition: transform 0.5s;
   touch-action: pan-y;
+  filter: drop-shadow(0 0 20px #121212);
 }
+
+
 
 .left-poster:hover {
   transform: scale(1.1);
