--- a/src/components/About/aboutus/AboutUs.css
+++ b/src/components/About/aboutus/AboutUs.css
@@ -1,77 +1,50 @@
-.about-us-container {
-  display: flex;
-  justify-content: center;
-}
-
-.about-us-header {
-  background-image: url("../aboutus/assests/mess.jpeg");
-  background-color: rgba(0, 0, 0, 0.925); /* black with 50% opacity */
-  background-blend-mode: multiply; /* blend background image with black */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 300px;
-  position: relative;
-}
-
-.about-us-header::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.about-us-header:hover::before {
-  opacity: 0.5;
-}
-
-.header-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.about-container {
+  color: #fff;
+  padding: 40px;
   text-align: center;
-  color: white;
+  margin-top: 40px;
 }
 
-.header-text h1 {
-  font-size: 50px;
-  margin-bottom: 0;
+.about-heading {
+  font-size: 3rem;
+  margin-bottom: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(138, 0, 0);
+  font-weight: 600;
 }
 
-.welcome-section {
-  background-color: #f5f5f5;
-  padding-top: 80px;
-  padding-bottom: 80px;
-  animation: heading 1s ease-in-out;
+.about-image {
+  margin-top: 20px;
+  width: 70%;
+  height: 250px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .welcome-container {
-  max-width: 800px;
-  margin-left: 0; /* Change margin-left to 0 to move the content to the left */
-  margin-right: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 10%;
+  background: linear-gradient(to bottom, #8a0700, #c22f2f);
+  padding: 50px;
+  color: #fff;
+  text-align: center;
+  margin-top: -7%;
+}
+.wel-container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 100px 0;
+  text-align: center;
 }
 
 .welcome-heading {
   font-size: 44px;
   font-weight: bold;
   text-align: center;
-  color: #aa010f;
-  margin-right: 30%;
+  color: #ffffff;
+  margin-right: 2%;
   margin-bottom: 30px;
   position: relative; /* Add position relative to enable absolute positioning of the red line */
-  animation: slide-in 1s ease-in-out; /* Add slide-in animation with 1 second duration */
-  
-
+  font-family: Georgia, serif;
 }
 .welcome-paragraph {
   margin: 30px auto;
@@ -81,44 +54,56 @@
   text-align: justify;
   text-justify: inter-word;
   font-size: 110%;
-  margin-right: 35%; /* Add negative left margin to align with the heading */
+  margin-right: 8%;
+  font-family: Georgia, serif;
 }
 
-.text-mahroon {
-  color: #800000; /* Replace with your desired shade of dark red/maroon */
+.recognized-section {
+  background-image: url("../../../../public/shade.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -4%;
+  margin-bottom: 3%;
 }
-.welcome-images-container {
+
+.recognized-container {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+.recognized-heading-container {
+  flex-basis: 50%;
+}
+
+.recognized-heading {
+  color: #9c0000;
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+
+.recognized-images-container {
+  display: flex;
+  flex-basis: 50%;
   justify-content: flex-end;
-  position: absolute;
-  left: 63%;
-  top: 730px; /* adjust this value as needed */
 }
 
-.welcome-image {
+.recognized-image {
   width: 200px;
-  height: 180px;
-  animation: image-animation 1s ease-in-out infinite alternate;
-  margin-left: 10px;
+  height: 200px;
+  margin-left: 20px;
 }
 
-.welcome-image1 {
+.recognized-images-container {
   width: 300px;
   height: 180px;
   margin-left: 10px;
   animation: image-animation 1s ease-in-out infinite alternate-reverse;
 }
-@keyframes heading {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
 @keyframes slide-in {
   from {
     transform: translateX(-20%); /* Move the element from left to right */
