--- a/src/components/About/message/Message.css
+++ b/src/components/About/message/Message.css
@@ -1,20 +1,41 @@
-.messHead-container {
+
+.chairImg-container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-left: 10%;
+  background: linear-gradient(to right, #640109, #c72727
+  ); 
 }
 
-.message-header {
-  background-image: url("../aboutus/assests/mess.jpeg");
-  background-color: rgba(0, 0, 0, 0.925); /* black with 50% opacity */
-  background-blend-mode: multiply; /* blend background image with black */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 300px;
-  position: relative;
+.chair-image-container {
+  width: 30%;
 }
 
+.chair-image-container img {
+  width: 88%;
+  height: auto;
+}
+
+.chair-info-container {
+  width: 70%;
+  padding-left: 50px;
+}
+
+.chair-name {
+  font-size: 42px;
+  font-weight: bold;
+  color: white; /* set heading color to white */
+  font-family: Georgia, serif;
+
+}
+.chair-description {
+  font-size: 33px;
+  font-weight: bold;
+  color: rgb(255, 255, 255); /* change color as needed */
+  font-family: Georgia, serif;
+
+}
 .bold-Red {
   color: rgb(138, 10, 10);
   font-weight: bold;
@@ -39,7 +60,7 @@
 }
 
 .message-section {
-  background-color: #e9e9e9;
+  background-color: #f8f8f8ec;
   padding-top: 80px;
   padding-bottom: 80px;
   animation: heading 1s ease-in-out;
@@ -52,66 +73,30 @@
 }
 
 .message-heading1 {
-  font-size: 48px;
+  font-size: 38px;
   font-weight: bold;
   text-align: left;
   color: rgb(138, 10, 10);
-  margin-bottom: 28px;
+  margin-bottom: 2px;
   position: relative;
-  animation: slide-in 1s ease-in-out; /* Add slide-in animation with 1 second duration */
+  font-family: Georgia, serif;
 }
 .message-heading2 {
-  font-size: 33px;
+  font-size: 28px;
   font-weight: bold;
   text-align: left;
   color: rgb(138, 10, 10);
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   position: relative;
+  font-family: Georgia, serif;
 }
 .message-paragraph {
   text-align: justify;
   text-justify: inter-word;
-  font-size: 110%;
-}
-.red-underline {
-  width: 15%;
-  height: 4px;
-  background-color: #085014;
-  position: absolute;
-  top: 649px; /* Adjust the top value to position the red line correctly */
-  left: 28%; /* Position the red line at the center of the heading */
-  animation: underline 2s ease-in-out infinite;
-  transform: translateX(-50%); /* Center the red line horizontally */
+  font-size: 115%;
+  color: rgb(80, 80, 80);
+  font-family: Georgia, serif;
+
 }
 
-@keyframes underline {
-  0% {
-    transform: translateX(-50%) scaleX(0); /* Start with no width */
-  }
-  50% {
-    transform: translateX(-50%) scaleX(1.2); /* Scale up to a little larger than the original width */
-  }
-  100% {
-    transform: translateX(-50%) scaleX(0); /* End with no width again */
-  }
-}
-@keyframes heading {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes slide-in {
-  from {
-    transform: translateX(-20%); /* Move the element from left to right */
-    opacity: 0; /* Start with 0 opacity */
-  }
-  to {
-    transform: translateX(0); /* Move the element to its original position */
-    opacity: 1; /* End with 100% opacity */
-  }
-}
+
