--- a/src/components/About/aboutus/Mission.css
+++ b/src/components/About/aboutus/Mission.css
@@ -1,1 +1,38 @@
 
+.AboutMission-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8%;
+  }
+  
+  .Mission-image-container {
+    width: 48%;
+    margin-left: 6%;
+
+  }
+  
+  .Mission-image-container img {
+    max-width: 100%;
+
+  }
+  
+  .Mission-message-container {
+   width: 40%; /* Decrease the width to 40% */
+  padding: 0 20px;
+  }
+  
+  .Mission-message-container h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+    color: rgb(114, 0, 0);
+    font-weight: 700;
+    font-family: Georgia, serif;
+
+  }
+  
+  .Mission-message-container p {
+    font-size: 17px;
+    text-align: justify;
+    text-justify: inter-word;
+    font-family: Georgia, serif;
+}
