--- a/src/components/About/aboutus/Objective.css
+++ b/src/components/About/aboutus/Objective.css
@@ -8,6 +8,8 @@
   padding: 0;
   margin: 5%;
   transition: opacity 1s ease-out, transform 1s ease-out;
+  font-family: Georgia, serif;
+
 }
 
 .objective-list li {
@@ -34,13 +36,15 @@
 }
 
 .objective-heading {
-  font-size: 42px;
+  font-size: 2.4rem;
   font-weight: bold;
   text-align: left;
   margin-left: 8%; /* Add margin-left to match list margin */
-  color: #9c1414;
+  color: #7c0101;
   top: 60px;
   position: relative;
+  font-family: Georgia, serif;
+
 }
 
 .objective-list li {
