--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -21,10 +21,10 @@
   display: flex;
   justify-content: space-around;
   background: linear-gradient(to bottom, #8a0700, #c22f2f);
-  padding: 74px;
+  padding: 68px;
   color: #fff;
-  margin-top: -9%; /* move the container up by 50 pixels */
-  max-width: 82%; /* decrease the maximum width to 80% */
+  margin-top: -10%; /* move the container up by 50 pixels */
+  max-width: 80%; /* decrease the maximum width to 80% */
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 18%;
@@ -41,26 +41,21 @@
   margin-left: -38px;
   text-align: center;
 }
+
+
 .contact-info-item h2 {
-  font-family: Georgia, serif;
-  font-size: 1.3rem;
-  margin-bottom: 20px;
+  font-family:'Times New Roman', Times, serif;
+  font-size: 1.4rem;
+  margin-bottom: 15px;
+  text-align: center; /* Add this line to center the heading */
 }
 
-.contact-info-item.mail p {
-  text-align: center;
+.contact-info-item p {
+  text-align: center; /* Add this line to center the paragraph */
   margin-top: 10px;
-  line-height: 1.5;
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.contact-info-item.phone p {
-  text-align: center;
-  margin-top: 10px;
-  line-height: 1.5;
+  line-height: 1;
   font-size: 18px;
-  margin-left: 2px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .form-container {
