--- a/src/components/About/Rector/Rector.css
+++ b/src/components/About/Rector/Rector.css
@@ -97,3 +97,71 @@
   font-family: Georgia, serif;
 
 }
+@media (max-width: 767px) {
+  .RecImg-container {
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left: 5%;
+    padding-bottom: 30px;
+  }
+
+  .Rector-image-container {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .Rector-image-container img {
+    width: 100%;
+    max-height: 370px; /* Set a maximum height for the image */
+
+  }
+  .rector-info-container {
+    width: 100%;
+    padding-left: 0;
+    text-align: center;
+  }
+
+  .rector-name {
+    font-size: 18px;
+  }
+
+  .rector-description {
+    font-size: 17px;
+  }
+  .Recmessage-section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    }
+    
+    .Recmessage-container {
+    max-width: 100%;
+    margin-left: 5%;
+    margin-right: 5%;
+    }
+    
+    .Recmessage-heading1 {
+    font-size: 27px;
+    text-align: left;
+    margin-bottom: 5px;
+    }
+    
+    .Recmessage-heading2 {
+    font-size: 18px;
+    text-align: left;
+    margin-bottom: 14px;
+    }
+    
+    .Recmessage-paragraph {
+    font-size: 15px;
+    text-align: justify;
+    font-family:Arial, Helvetica, sans-serif;
+    }
+    
+    .bold-Red {
+    font-size: 14px;
+    }
+    
+    .bold-grey {
+    font-size: 14px;
+    }
+}
