--- a/src/components/Home/News/news.css
+++ b/src/components/Home/News/news.css
@@ -84,3 +84,109 @@
   color:white;
   font-family: "Lato", Sans-serif;
 }
+@media screen and (max-width: 768px) {
+  .news-section {
+    height: auto;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .left-poster {
+    width: 100%;
+    height: 50%;
+    margin: 0;
+  }
+
+  .right-content {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+
+  .news-heading {
+    font-size: 40px;
+  }
+
+  .news-content {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .news-section {
+    height: auto;
+    padding-top: 100px;
+  }
+
+  
+  .background-image {
+    height: 250px;
+    background-position: top;
+  }
+
+  .content-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .left-poster {
+    margin: 0 auto;
+    width: 80%;
+    height: 250px;
+    margin-bottom: 2rem;
+  }
+
+  .right-content {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+
+  .news-heading {
+    font-size: 40px;
+  }
+
+  .news-content {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .background-image {
+    height: 200px;
+  }
+
+  .left-poster {
+    height: 200px;
+    margin-bottom: 1rem;
+  }
+
+  .right-content {
+    height: auto;
+  }
+
+  .news-heading {
+    font-size: 30px;
+  }
+
+  .news-content {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .left-poster {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 1rem;
+  }
+
+  .news-heading {
+    font-size: 24px;
+  }
+
+  .news-content {
+    font-size: 0.9rem;
+  }
+}
