--- a/src/components/Qec/QecHeader/Qec.css
+++ b/src/components/Qec/QecHeader/Qec.css
@@ -5,7 +5,7 @@
 }
 
 .qecIntro-header {
-  background-image: url("../../../public/Qec.png");
+  background-image: url("../../../../public/Qec.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
