--- a/src/components/About/aboutus/Objective.css
+++ b/src/components/About/aboutus/Objective.css
@@ -86,3 +86,35 @@
     transform: translateY(0);
   }
 }
+@media (max-width: 768px) {
+  .objective-heading {
+    font-size: 28px;
+    margin-left: 5%;
+    margin-bottom: 20%;
+  }
+
+  .objective-list {
+    margin: 3% 5%;
+  }
+
+  .objective-list li {
+    width: 100%;
+    padding: 15px 20px 15px 35px;
+    margin-bottom: 15px;
+    opacity: 1;
+    transform: translateY(0px);
+    transition: none; /* Remove the transition properties */
+    position: relative;
+  }
+
+  .objective-list li::before {
+    content: "✔";
+    color: rgb(168, 3, 3);
+    font-size: 18px;
+    margin-right: 8px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+  }
+}
