--- a/src/components/About/aboutus/AboutUs.css
+++ b/src/components/About/aboutus/AboutUs.css
@@ -104,16 +104,7 @@
   margin-left: 10px;
   animation: image-animation 1s ease-in-out infinite alternate-reverse;
 }
-@keyframes slide-in {
-  from {
-    transform: translateX(-20%); /* Move the element from left to right */
-    opacity: 0; /* Start with 0 opacity */
-  }
-  to {
-    transform: translateX(0); /* Move the element to its original position */
-    opacity: 1; /* End with 100% opacity */
-  }
-}
+
 @keyframes image-animation {
   0% {
     transform: translateY(0);
@@ -123,5 +114,55 @@
   }
   100% {
     transform: translateY(0);
+  }
+}
+
+
+@media (max-width: 768px) {
+  .about-container {
+    padding: 20px;
+    margin-bottom: -10%;
+  }
+
+  .about-heading {
+    font-size: 2.5rem;
+  }
+
+  .about-image {
+    width: 90%;
+    height: auto;
+  }
+
+  .welcome-container {
+    margin-bottom: -23%;
+  }
+  .welcome-heading {
+    font-size: 28px;
+    margin-bottom: 9%;
+    margin-top: -10%;
+  }
+
+  .welcome-paragraph {
+    font-size: 3.2vw;
+    width: 139%;
+    margin-left: -20%;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .recognized-heading {
+    font-size: 5vw;
+    margin-bottom: 5vw;
+    width: 190%;
+  }
+
+  .recognized-images-container {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Adjust styles for screens smaller than 480px */
+  .about-heading {
+    font-size: 2rem;
   }
 }
